[gd_scene load_steps=6 format=3 uid="uid://c48ryvo1i2nmd"]

[ext_resource type="Script" path="res://addons/event_sheet/source/elements/block/conditions/group.gd" id="1_p10o5"]
[ext_resource type="Texture2D" uid="uid://eg1xdumosqky" path="res://addons/event_sheet/resources/icons/group.svg" id="2_qhmuc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5dvcy"]

[sub_resource type="LabelSettings" id="LabelSettings_u6pq4"]
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_3bn0q"]
font_size = 8
font_color = Color(1, 1, 1, 0.392157)

[node name="Group" type="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
offset_right = 200.0
offset_bottom = 30.0
size_flags_horizontal = 3
mouse_filter = 2
script = ExtResource("1_p10o5")
color = Color(0.892955, 0, 0.275886, 1)

[node name="GroupButton" type="Button" parent="."]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 1
theme_override_styles/focus = SubResource("StyleBoxEmpty_5dvcy")
flat = true

[node name="MarginContainer" type="MarginContainer" parent="GroupButton"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.0
offset_right = 100.0
offset_bottom = 13.0
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 5

[node name="HBoxContainer" type="HBoxContainer" parent="GroupButton/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2

[node name="Icon" type="TextureRect" parent="GroupButton/MarginContainer/HBoxContainer"]
modulate = Color(0.894118, 0, 0.27451, 1)
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("2_qhmuc")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="GroupButton/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="Name" type="Label" parent="GroupButton/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Group Name"
label_settings = SubResource("LabelSettings_u6pq4")
vertical_alignment = 2

[node name="Description" type="Label" parent="GroupButton/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Group Description"
label_settings = SubResource("LabelSettings_3bn0q")

[connection signal="theme_changed" from="." to="." method="_on_theme_changed"]
[connection signal="focus_entered" from="GroupButton" to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="GroupButton" to="." method="_on_focus_exited"]
[connection signal="gui_input" from="GroupButton" to="." method="_on_gui_input"]
